--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 streamlit
-opencv-contrib-python==4.10.0.84
+opencv-contrib-python-headless==4.10.0.84
 pillow
 pandas
 numpy
+streamlit-webrtc
+av
+
+
